--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             Cyberplace | Ecommerce Website
         </title>
 
-        <link rel="stylesheet" href="E:\Microsoft VS Code\VS Code\WebDev\style.css">
+        <link rel="stylesheet" href="style.css">
 
     </head>
 
